--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <div class="col-1"></div>
             <div class="col-10">
                 <h1 class="wow ">MyCompany欢迎你</h1>
-                <p>我们是专业团队，欢迎来到德莱联盟我们是专业团队，<br>欢迎来到德莱联盟我们是专业团队，欢迎来到德莱联盟我们是专业团队，欢迎来到德莱联盟</p>
+                <p> 上传的例子 我们是专业团队，欢迎来到德莱联盟我们是专业团队，<br>欢迎来到德莱联盟我们是专业团队，欢迎来到德莱联盟我们是专业团队，欢迎来到德莱联盟</p>
                 <img class="img-fluid wow tada" src="images/pp.png">
             </div>
-            <div class="col-1"></div>
+            <div class="col-1"> </div>
         </div>
     </div>
 </section>
