--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="col-1"></div>
             <div class="col-10">
                 <h1 class="wow ">MyCompany欢迎你</h1>
-                <p> 上传的例子 我们是专业团队，欢迎来到德莱联盟我们是专业团队，<br>欢迎来到德莱联盟我们是专业团队，欢迎来到德莱联盟我们是专业团队，欢迎来到德莱联盟</p>
+                <p> test2 我们是专业团队，欢迎来到德莱联盟我们是专业团队，<br>欢迎来到德莱联盟我们是专业团队，欢迎来到德莱联盟我们是专业团队，欢迎来到德莱联盟</p>
                 <img class="img-fluid wow tada" src="images/pp.png">
             </div>
             <div class="col-1"> </div>
